# FoodDiary-BE

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: python-clean-code-rules.mdc  python-fastapi-rules-ko.mdc  python-refactoring-rules.mdc
.github/: PULL_REQUEST_TEMPLATE.md  auto_assign.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task.md
.github/workflows/: cd-nginx.yml  cd.yml  ci.yml
app/: main.py
app/core/: auto_migrations.py  config.py  database.py  dependencies.py  scheduler.py  security.py
app/core/schedulers/: __init__.py  diary_scheduler.py  executor.py
app/crud/: device.py  diary.py  diary_analysis.py  photo.py  user.py
app/models/: __init__.py  device.py  diary.py  mixins.py  photo.py  user.py
app/routers/: __init__.py  auth.py  device.py  diaries.py  diaries_mock.py  health.py  insights.py  photos.py  restaurant.py  users.py
app/schemas/: __init__.py  auth.py  device.py  diary.py  health.py  insights.py  photo.py  restaurant.py
app/services/: __init__.py  analysis_service.py  auth.py  device.py  diary_service.py  fcm_sender.py  insights.py  jwt.py  kakao_map_service.py  llm_service.py  notification_service.py  oauth2.py  photo_service.py  restaurant_service.py  user.py  user_service.py
app/usecases/: auth.py  device.py  diary.py  insights.py  photos.py  restaurant.py  user.py
app/utils/: __init__.py  exif_parser.py  file_storage.py  status_helper.py  time_classifier.py  timezone.py
docker/: .dockerignore  Dockerfile  docker-compose.local.yml
docs/: 00_overview.md  01_collaboration_principles.md  02_git_pr_guide.md  03_code_conventions.md  04_why_python_and_fastapi.md  05_fastapi_for_spring_developers.md  test_mode_api_guide.md
docs/설계/: DB_API설계.md  개발_작업_플로우.md  백그라운드_태스크_확장성_설계.md  작업계획_비동기분석_FCM_개발_계획.md
docs/음식분석/: TODO.md
nginx/: docker-compose.nginx.yml  nginx.conf
scripts/: init-db.sql
tests/: conftest.py  test_auth_jwt.py  test_auth_oauth.py  test_device.py  test_diaries.py  test_dummy.py  test_file_storage.py  test_insights.py  test_insights_service.py  test_kakao_map.py  test_kakao_map_service.py  test_notification.py  test_notification_service.py  test_photo_router.py  test_photo_upload.py  test_restaurant.py  test_scheduler.py  test_users.py
tests/fixtures/: auth_fixtures.py  diary_fixtures.py  insights_fixtures.py  photo_fixtures.py
(+1 files in other folders)
